...
        tools:text="6 de 10 preguntas estan correctas"
        android:gravity="center"
        android:id="@+id/score_subtitle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terminar"
        android:layout_margin="8dp"
        android:id="@+id/finish_btn"/>

</LinearLayout>
